Checked everything fixed overlapping content and added missing target attribute

--- a/src/components/ContactMe.module.css
+++ b/src/components/ContactMe.module.css
@@ -41,6 +41,7 @@
 
 .contactMePara {
   color: #2de2e6;
+  font-weight: 400;
 }
 
 .contactMeSvgContainer {
