--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -125,7 +125,8 @@
     position: absolute;
     z-index: 1;
     width: 30rem;
-    right: 0%;
+    max-width: 50%;
+    right: 2.5%;
     opacity: 0;
     visibility: hidden;
     height: 0%;
@@ -144,8 +145,9 @@
     position: absolute;
     z-index: 1;
     width: 30em;
-    top: 70%;
-    right: 0%;
+    max-width: 50%;
+    top: 75%;
+    right: 2.5%;
     opacity: 1;
     visibility: visible;
     height: 100vh;
@@ -168,5 +170,9 @@
 @media screen and (max-width: 600px) {
   .navHeader {
     font-size: 1.25rem;
+  }
+
+  .navContainer {
+    padding: 0.75em;
   }
 }
